# tensor-systems-core

./: LICENSE  README.md  main.py  pyproject.toml
src/tensor_systems/: linear_algebra.py
tests/: benchmark.py  test_linear_algebra.py
